syntax = "proto3";
package service;

option go_package = "internal/Week04/service;service";

message OrderRequest {
  int32 order_id = 1; // 订单id
}

message OrderResponse {
  int32 order_no = 1; // 订单编号
}

service OrderService {
  rpc GetOrderNo (OrderRequest) returns (OrderResponse);
}